# xpcs-eigen

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.aps  G2_Plotting.ipynb  Plotting.ipynb  README.md  binary.m  update.sh
notebooks/: H5Functions.ipynb  NSLS-II.ipynb  Plot_Faisal.ipynb  Plotting.ipynb
notebooks/.ipynb_checkpoints/: Plot_Faisal-checkpoint.ipynb
openmp_examples/: hello_world.cpp  linked  linked.c  mandel  mandel.c  pi_nothread  pi_nothread.cpp  pi_pragmafor  pi_pragmafor.cpp  pi_thread  pi_thread_critical  pi_thread_v2  pi_threaded.cpp  pi_threaded_critical.cpp  pi_threaded_v2.cpp
python/: io_ufxc.py  main.py
python/filter/: frame_sum.py  pixel_sum.py
python/h5/: h5compare.py
python/io/: imm_file.py
src/: benchmark.h  configuration.cpp  configuration.h  corr.cpp  corr.h  darkImage.cpp  darkImage.h  filters.cpp  filters.h  funcs.cpp  funcs.h  h5result.cpp  h5result.h  imm.cpp  imm.h  immHeader.h  main.cpp  main2.cpp  main3.cpp  parallel_read.cpp  parallel_read_tasks.cpp  row.h  sparsedata.cpp  sparsedata.h
src/io/: py_config.cpp  py_xpcs_eigen.cpp
src/xpcs/: benchmark.h  configuration.cpp  configuration.h  corr.cpp  corr.h  dark_image.cpp  dark_image.h  eigen.cpp  funcs.cpp  funcs.h  h5_result.cpp  h5_result.h  hdf5_utils.cpp  hdf5_utils.h  imm.cpp  imm.h  main.cpp  main.cpp.bk  main2.cpp
src/xpcs/data_structure/: dark_image.cpp  dark_image.h  row.h  sparse_data.cpp  sparse_data.h
src/xpcs/ds/: row.h  sparse_data.cpp  sparse_data.h
src/xpcs/filter/: average.cpp  average.h  burst_filter.h  dense_average.cpp  dense_average.h  dense_filter.cpp  dense_filter.h  filter.h  pixel_sum.h  sparse_filter.cpp  sparse_filter.h  sparse_filter_burst.cpp  sparse_filter_burst.h  stride.cpp  stride.h  stride_average.cpp  stride_average.h
src/xpcs/io/: hdf5.cpp  hdf5.h  imm.cpp  imm.h  imm_header.h  imm_reader.cpp  imm_reader.h  reader.h  rigaku.cpp  rigaku.h  ufxc.cpp  ufxc.h  ufxc_reader.cpp  ufxc_reader.h
